# ss.lv

./: .env  README.md  docker-compose.yaml  init.sh  nginx.conf  nginx.dev.conf  package-lock.json  package.json  redis.conf  web.html
backend/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  docker.env  entrypoint.sh
backend/entity/: Cargo.toml
backend/entity/src/: advert.rs  chat.rs  deal.rs  favorites.rs  lib.rs  message.rs  payment.rs  reviews.rs  specification.rs  specifications.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230921_174343_update1.rs  m20230921_213853_update3.rs  m20231005_202202_update4.rs  m20231005_203657_update5.rs  m20231008_205049_update6.rs  m20231009_180620_update7.rs  m20231017_165401_hz.rs  m20240812_092841_reviews.rs  m20240815_075200_updates.rs  m20240922_131122_refresh_token.rs  m20240927_210656_payment.rs  m20241130_224320_role.rs
backend/src/: advert_queries.rs  main.rs  user_queries.rs
chat/: .env.example  Dockerfile  README.md  docker.env  package-lock.json  package.json  types.ts
chat/prisma/: schema.prisma
chat/src/: all-exceptions.filter.ts  app.controller.ts  app.module.ts  app.service.ts  auth.guard.ts  events.gateway.ts  kysely.service.ts  main.ts  vote.module.ts  vote.service.ts
conf.d/: ad-ee.tech.conf
frontend/: .dockerignore  .env  .gitignore  Dockerfile  biome.json  houdini.config.js  package-lock.json  package.json  schema.graphql  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/messages/: en.json  lv.json  ru.json
frontend/project.inlang/: project_id  settings.json
frontend/src/: App.vue  app.d.ts  app.html  client.ts  hooks.server.ts  main.ts
frontend/src/components/: Adverts.vue  Error.vue  Footer.vue  Header.vue  Loading.vue  Profile.vue  Register.vue
frontend/src/graphql/: advert.ts  stats.ts  user.ts
frontend/src/lib/: consts.ts  helpers.ts  i18n.ts  schemas.ts  socket.ts  types.ts  userStore.ts
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/routes/: +error.svelte  +layout.gql  +layout.server.ts  +layout.svelte  +page.gql  +page.svelte
frontend/src/styles/: global.css
frontend/src/views/: Advert.vue  Adverts.vue  Bookmarks.vue  Contact.vue  CreateAdvert.vue  Edit.vue  EditAdvert.vue  Home.vue  Login.vue  Me.vue  NotFound.vue  Register.vue  Stats.vue  TAC.vue  User.vue  UserView.vue
my-app/: Dockerfile  houdini.config.js  package-lock.json  package.json  schema.graphql  tailwind.config.js  tsconfig.json
my-app/src/: app.d.ts  app.html  client.ts  hooks.server.ts  svelte.d.ts
my-app/src/lib/: helpers.ts  schemas.ts  (+1 more)
telegram-bot/: .env  .env.example  Dockerfile  database.py  docker.env  main.py  models.py  requirements.txt
vue-project/: package-lock.json  package.json
vue-project/src/: main.ts
(+111 files in other folders)
