[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.9.0"
async-graphql = "6.0.6"
async-graphql-actix-web = "6.0.6"
dotenvy = "0.15.7"
sea-orm = { version = "1.0.1", features = ["runtime-tokio" , "sqlx-postgres", "macros" ] }
sqlx = { version = "0.7.4", features = ["runtime-tokio"] }
tokio = {version="1.40", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4.38"
argon2 = "0.5.3"
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
actix-cors = "0.7.0"
serde_json = "1.0.128"
serde = "1.0.210"
reqwest = {version = "0.12.7", features = ["json"]}
deadpool-redis = "0.18.0"
rand = "0.8.5"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = 2

[build.limit]
local-memory="100%"
cpu="100%"
